Lookdev Spheres render black on latest master with Overlay refactor commit #72124

Closed
opened 2019-12-02 16:42:11 +01:00 by Daniel Santana · 20 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28

Blender Version
Broken: version: 2.82 (sub 3), branch: master, commit date: 2019-12-02 14:34, hash: 7866512627
Worked: Before Overlay refactor commit

Short description of error
Lookdev spheres render black.

Exact steps for others to reproduce the error

  • Open blender
  • Switch to Shading tab
  • Spheres are render black.
    image.png
**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28 **Blender Version** Broken: version: 2.82 (sub 3), branch: master, commit date: 2019-12-02 14:34, hash: `7866512627` Worked: Before Overlay refactor commit **Short description of error** Lookdev spheres render black. **Exact steps for others to reproduce the error** - Open blender - Switch to Shading tab - Spheres are render black. ![image.png](https://archive.blender.org/developer/F8185143/image.png)
Author

Added subscriber: @dgsantana

Added subscriber: @dgsantana

#72441 was marked as duplicate of this issue

#72441 was marked as duplicate of this issue

#72352 was marked as duplicate of this issue

#72352 was marked as duplicate of this issue

#72336 was marked as duplicate of this issue

#72336 was marked as duplicate of this issue

#72313 was marked as duplicate of this issue

#72313 was marked as duplicate of this issue

#72188 was marked as duplicate of this issue

#72188 was marked as duplicate of this issue

#72166 was marked as duplicate of this issue

#72166 was marked as duplicate of this issue
Clément Foucault was assigned by Philipp Oeser 2019-12-02 16:49:37 +01:00

Added subscriber: @robbott

Added subscriber: @robbott

I can reproduce with:
System Information
Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 560X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.20

Blender Version
Broken: version: 2.82 (sub 3), branch: master, commit date: 2019-12-02 17:09, hash: df29e9c070

I can reproduce with: **System Information** Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 560X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.20 **Blender Version** Broken: version: 2.82 (sub 3), branch: master, commit date: 2019-12-02 17:09, hash: `df29e9c070`

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Added subscriber: @ChuckOcheret

Added subscriber: @ChuckOcheret
Member

Added subscribers: @Oxer-1, @lichtwerk

Added subscribers: @Oxer-1, @lichtwerk

Added subscriber: @bbaby5746

Added subscriber: @bbaby5746

Added subscriber: @ignietferro-1

Added subscriber: @ignietferro-1
Clément Foucault was unassigned by Jeroen Bakker 2019-12-11 12:26:25 +01:00
Jeroen Bakker self-assigned this 2019-12-11 12:26:25 +01:00
Member

Added subscriber: @fclem

Added subscriber: @fclem

Added subscriber: @FilipMond

Added subscriber: @FilipMond
Member

Just did a bisect to be clear when this regression was introduced.
Also checked that the EEVEE rendering (who renders the spheres is already incorrect). So would point my attention to the draw_manager or EEVEE specific changes.

9516921c05

It seems like the nor attribute in the vbo is disabled when drawing the spheres. This used to be enabled.

Screenshot from 2019-12-11 12-57-11.png

Just did a bisect to be clear when this regression was introduced. Also checked that the EEVEE rendering (who renders the spheres is already incorrect). So would point my attention to the draw_manager or EEVEE specific changes. 9516921c05 It seems like the `nor` attribute in the vbo is disabled when drawing the spheres. This used to be enabled. ![Screenshot from 2019-12-11 12-57-11.png](https://archive.blender.org/developer/F8208872/Screenshot_from_2019-12-11_12-57-11.png)

This issue was referenced by b30a722f2d

This issue was referenced by b30a722f2d6faecccd3b81efc1f0aa567064bb3a

Added subscribers: @wacom, @grosgood

Added subscribers: @wacom, @grosgood
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72124
No description provided.